--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Cake - Bakery</title>
+        <title>ReutM - Cakes</title>
 
         <!-- Icon css link -->
         <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -44,8 +44,8 @@
 			<div class="top_header_area row m0">
 				<div class="container">
 					<div class="float-left">
-						<a href="tell:+18004567890"><i class="fa fa-phone" aria-hidden="true"></i> + (1800) 456 7890</a>
-						<a href="mainto:info@cakebakery.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@cakebakery.com</a>
+						<a href="tell:+972523238499"><i class="fa fa-phone" aria-hidden="true"></i>052-3238499</a>
+						<a href="mainto:reutmcakes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> reutmcakes@gmail.com</a>
 					</div>
 					<div class="float-right">
 						<ul class="h_social list_style">
@@ -704,11 +704,11 @@
         				<div class="col-lg-3 col-6">
         					<aside class="f_widget f_contact_widget">
         						<div class="f_title">
-        							<h3>Contact Info</h3>
+        							<h3>צרו קשר</h3>
         						</div>
-        						<h4>(1800) 574 9687</h4>
-        						<p>Justshiop Store <br />256, baker Street,, New Youk, 5245</p>
-        						<h5>cakebakery@contact.co.in</h5>
+        						<h4>052-3238499</h4>
+        						<p>Justshiop Store <br />הרב ברכיה 22, רמת בית שמש ד</p>
+        						<h5>reutmcakes@gmail.com</h5>
         					</aside>
         				</div>
         			</div>
