--- a/index-4.html
+++ b/index-4.html
@@ -619,9 +619,9 @@
         						<div class="f_title">
         							<h3>Contact Info</h3>
         						</div>
-        						<h4>(1800) 574 9687</h4>
+        						<h4>052-3238499</h4>
         						<p>Justshiop Store <br />256, baker Street,, New Youk, 5245</p>
-        						<h5>cakebakery@contact.co.in</h5>
+        						<h5>reutmcakes@gmail.com</h5>
         					</aside>
         				</div>
         			</div>
