--- a/index-5.html
+++ b/index-5.html
@@ -45,8 +45,8 @@
 			<div class="top_header_area row m0">
 				<div class="container">
 					<div class="float-left">
-						<a href="tell:+18004567890"><i class="fa fa-phone" aria-hidden="true"></i> + (1800) 456 7890</a>
-						<a href="mainto:info@cakebakery.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@cakebakery.com</a>
+						<a href="tell:+972523238499"><i class="fa fa-phone" aria-hidden="true"></i>052-3238499</a>
+						<a href="mainto:reutmcakes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> reutmcakes@gmail.com</a>
 					</div>
 					<div class="float-right">
 						<ul class="h_social list_style">
@@ -867,7 +867,7 @@
         						</div>
         						<h4>(1800) 574 9687</h4>
         						<p>Justshiop Store <br />256, baker Street,, New Youk, 5245</p>
-        						<h5>cakebakery@contact.co.in</h5>
+        						<h5>reutmcakes@gmail.com</h5>
         					</aside>
         				</div>
         			</div>
