--- a/menu.html
+++ b/menu.html
@@ -45,8 +45,8 @@
 			<div class="top_header_area row m0">
 				<div class="container">
 					<div class="float-left">
-						<a href="tell:+18004567890"><i class="fa fa-phone" aria-hidden="true"></i> + (1800) 456 7890</a>
-						<a href="mainto:info@cakebakery.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> info@cakebakery.com</a>
+						<a href="tell:+972523238499"><i class="fa fa-phone" aria-hidden="true"></i>052-3238499</a>
+						<a href="reutmcakes@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i> reutmcakes@gmail.com</a>
 					</div>
 					<div class="float-right">
 						<ul class="h_social list_style">
@@ -290,7 +290,7 @@
         						<img src="img/footer-logo.png" alt="">
         						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>
         						<ul class="nav">
-        							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
         							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
         							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -313,36 +313,23 @@
         				<div class="col-lg-3 col-6">
         					<aside class="f_widget f_link_widget">
         						<div class="f_title">
-        							<h3>Work Times</h3>
+        							<h3>שעות פתיחה </h3>
         						</div>
         						<ul class="list_style">
-        							<li><a href="#">Mon. :  Fri.: 8 am - 8 pm</a></li>
-        							<li><a href="#">Sat. : 9am - 4pm</a></li>
-        							<li><a href="#">Sun. : Closed</a></li>
+        							<li><a href="#">חמישי: 18:00-22:00</a></li>
+        							<li><a href="#">שישי: 10:00-12:00</a></li>
         						</ul>
         					</aside>
         				</div>
         				<div class="col-lg-3 col-6">
         					<aside class="f_widget f_contact_widget">
         						<div class="f_title">
-        							<h3>Contact Info</h3>
+        							<h3>צרו קשר</h3>
         						</div>
-        						<h4>(1800) 574 9687</h4>
-        						<p>Justshiop Store <br />256, baker Street,, New Youk, 5245</p>
-        						<h5>cakebakery@contact.co.in</h5>
+        						<h4>052-3238499</h4>
+        						<h5>reutmcakes@gmail.com</h5>
+								<p>הרב ברכיה 22, בית שמש</p>
         					</aside>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="footer_copyright">
-        		<div class="container">
-        			<div class="copyright_inner">
-        				<div class="float-left">
-        					<h5><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></h5>
-        				</div>
-        				<div class="float-right">
-        					<a href="#">Purchase Now</a>
         				</div>
         			</div>
         		</div>
