--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     
-<head>
+<head dir="rtl">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +37,7 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body>
+    <body dir="rtl">
         
         <!--================Main Header Area =================-->
 		<header class="main_header_area">
@@ -669,7 +669,7 @@
         						<img src="img/footer-logo.png" alt="">
         						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui bland itiis praesentium voluptatum deleniti atque corrupti.</p>
         						<ul class="nav">
-        							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+        							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
         							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
         							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -692,12 +692,11 @@
         				<div class="col-lg-3 col-6">
         					<aside class="f_widget f_link_widget">
         						<div class="f_title">
-        							<h3>Work Times</h3>
+									<h3>שעות פתיחה </h3>
         						</div>
         						<ul class="list_style">
-        							<li><a href="#">Mon. :  Fri.: 8 am - 8 pm</a></li>
-        							<li><a href="#">Sat. : 9am - 4pm</a></li>
-        							<li><a href="#">Sun. : Closed</a></li>
+        							<li><a href="#">חמישי: 18:00-22:00</a></li>
+        							<li><a href="#">שישי: 10:00-12:00</a></li>
         						</ul>
         					</aside>
         				</div>
@@ -707,21 +706,9 @@
         							<h3>צרו קשר</h3>
         						</div>
         						<h4>052-3238499</h4>
-        						<p>Justshiop Store <br />הרב ברכיה 22, רמת בית שמש ד</p>
         						<h5>reutmcakes@gmail.com</h5>
+								<p>הרב ברכיה 22, בית שמש</p>
         					</aside>
-        				</div>
-        			</div>
-        		</div>
-        	</div>
-        	<div class="footer_copyright">
-        		<div class="container">
-        			<div class="copyright_inner">
-        				<div class="float-left">
-        					<h5><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></h5>
-        				</div>
-        				<div class="float-right">
-        					<a href="#">Purchase Now</a>
         				</div>
         			</div>
         		</div>
